--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
+        generate_statistics: true
     open-in-view: false
   
   sql:
@@ -33,6 +34,7 @@ logging:
     com.musinsa.point: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.hibernate.stat: DEBUG
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] [%X{requestId}] %-5level %logger{36} - %msg%n"
 
