--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,10 +23,11 @@ spring:
         use_sql_comments: true
         generate_statistics: true
     open-in-view: false
+    defer-datasource-initialization: true
   
   sql:
     init:
-      mode: never
+      mode: always
 
 logging:
   level:
