--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,8 @@ spring:
   sql:
     init:
       mode: always
+      data-locations: classpath:data.sql
+      continue-on-error: false
 
 logging:
   level:
